--- a/jex00/.classpath
+++ b/jex00/.classpath
@@ -36,6 +36,7 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/haga5/Documents/springbook/ex00/src/main/webapp/resources/ojdbc/ojdbc8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/haga5/Documents/springbook/jex00/src/main/webapp/WEB-INF/classes/lib/ojdbc6-11.2.0.3.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
